WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223490
anonymous table rows do not collapse if there are any other non-anonymous table row siblings
https://bugs.webkit.org/show_bug.cgi?id=223490
Summary
anonymous table rows do not collapse if there are any other non-anonymous tab...
Cameron McCormack (:heycam)
Reported
2021-03-18 18:00:41 PDT
anonymous table rows do not collapse if there are any other non-anonymous table row siblings
Attachments
Patch
(5.44 KB, patch)
2021-03-18 18:08 PDT
,
Cameron McCormack (:heycam)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2021-03-18 18:08:23 PDT
Created
attachment 423675
[details]
Patch
EWS
Comment 2
2021-03-19 14:45:26 PDT
Committed
r274739
: <
https://commits.webkit.org/r274739
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423675
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-19 14:46:21 PDT
<
rdar://problem/75637398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug